fixing scrolling on mobile

--- a/multiplayer/public/cursors/style.css
+++ b/multiplayer/public/cursors/style.css
@@ -1,11 +1,10 @@
-html {
+/* html {
     width: 100%;
     height: 100%;
-}
+} */
 
 body {
-    width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     background-color: aliceblue;
     overflow: hidden;
